--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MPL-2.0",
   "private": true,
   "dependencies": {
-    "gluon-build": "^1.0.0-rc.5"
+    "gluon-build": "git://github.com/pulse-browser/gluon.git#change-opt-level"
   },
   "scripts": {
     "build": "gluon build",
